--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.16"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "webpack --config webpack.config.js"
   }
 }
